Fixed unneeded scrollbar caused by the sticky footer.

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ html {
 }
 
 #donateMessage {
+    margin: 0px;
     margin-top: 8px;
 
     /*Font*/
